--- a/hu_sanhost_index.adoc
+++ b/hu_sanhost_index.adoc
@@ -13,10 +13,12 @@ summary:
 :linkattrs:
 :imagesdir: ./media/
 
-Discover the latest information on the SAN host utilities and access the installation procedure for your host configuration:
+Discover the latest information on SAN host utility releases and access the installation procedure for your host configuration.
 
-* link:hu_aix_61_rn.html[AIX host utilities]
-* link:hu_hpux_60_rn.html[HP-UX host utilities]
-* link:hu_luhu_71_rn.html[Linux unified host utilities]
-* link:hu_solaris_62_rn.html[Solaris host utilities]
-* link:hu_wuhu_71_rn.html[Windows Unified Host Utilities]
+NOTE: For reliable operation after installation, use the https://mysupport.netapp.com/matrix/imt.jsp?components=65623%3B64703%3B&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^] to verify that your host supports the complete iSCSI, FC, or FCoE configuration.
+
+* link:hu_aix_61_rn.html[Install AIX host utilities]
+* link:hu_hpux_60_rn.html[Install HP-UX host utilities]
+* link:hu_luhu_71_rn.html[Install Linux unified host utilities]
+* link:hu_solaris_62_rn.html[Install Solaris host utilities]
+* link:hu_wuhu_71_rn.html[Install Windows Unified Host Utilities]
