GH129 fixing broken links

--- a/hu_fcp_scsi_index.adoc
+++ b/hu_fcp_scsi_index.adoc
@@ -15,15 +15,14 @@ summary:
 
 You can configure the following SAN hosts for FCP or iSCSI with ONTAP. The host utility installation includes the SAN toolkit, SAN booting, and multipathing. There are also recommended settings for NetApp ONTAP LUNs.
 
-
 * link:hu_aix_72.html[AIX and PowerVM/VIOS]
-* link:hu_centos_85.html[CentOS]
+* link:hu_centos_asm_release_notes.html[CentOS]
 * link:hu_citrix_8x.html[Citrix Hypervisor and XenServer]
 * link:hu_vsphere_8.html[ESXi VMware vSphere]
 * link:hu_hpux_11iv3.html[HP UX]
-* link:hu_ol_90.html[Oracle Linux]
-* link:hu_rhel_92.html[Red Hat Enterprise Linux]
+* link:hu_ol_asm_release_notes.html[Oracle Linux]
+* link:hu_rhel_asm_release_notes.html[Red Hat Enterprise Linux]
 * link:hu_solaris_114.html[Solaris]
-* link:hu_sles_15SP4.html[SUSE Linux Enterprise Server]
+* link:hu_sles_asm_release_notes.html[SUSE Linux Enterprise Server]
 * link:hu_veritas_8x.html[Veritas Infoscale and Storage Foundation]
 * link:hu_windows_2022.html[Windows]
