--- a/hu_ol_91.adoc
+++ b/hu_ol_91.adoc
@@ -20,7 +20,7 @@ include::_include/hu/reuse_hu_installing_luhu_without32.adoc[]
 
 == SAN toolkit
 
-The toolkit is installed automatically when you install the NetApp Host Utilities package. This kit provides the `sanlun` utility, which helps you manage LUNs and HBAs. The `sanlun` command returns information about the LUNs mapped to your host, multipathing, and information necessary to create initiator groups.
+The tool kit is installed automatically when you install the NetApp Host Utilities package. This kit provides the `sanlun` utility, which helps you manage LUNs and HBAs. The `sanlun` command returns information about the LUNs mapped to your host, multipathing, and information necessary to create initiator groups.
 
 In the following example, the `sanlun lun show` command returns LUN information.
 ----
@@ -47,7 +47,7 @@ include::_include/hu/reuse_hu_san_booting_steps.adoc[]
 
 == Multipathing
 
-For Oracle Linux (OL) 9.1 the `/etc/multipath.conf` file must exist, but you do not need to make specific changes to the file. OL 9.1 is compiled with all settings required to recognize and correctly manage ONTAP LUNs.
+For OL 9.1 the `/etc/multipath.conf` file must exist, but you do not need to make specific changes to the file. OL 9.1 is compiled with all settings required to recognize and correctly manage ONTAP LUNs.
 
 include::_include/hu/reuse_hu_multipathing_non_asa.adoc[]
 
@@ -66,7 +66,7 @@ size=80G features='3 queue_if_no_path pg_init_retries 50' hwhandler='1 alua' wp=
   |- 12:0:1:6   sdgp 132:80  active ready running
 ----
 
-NOTE: Do not use an excessive number of paths to a single LUN. No more than 4 paths should be required. More than 8 paths might cause path issues during storage failures.
+NOTE: Do not use an excessive number of paths to a single LUN. No more than four paths should be required. More than eight paths might cause path issues during storage failures.
 
 include::_include/hu/reuse_hu_non_asa_configuration.adoc[]
 
@@ -87,7 +87,7 @@ include::_include/hu/reuse_hu_asa_configuration_note.adoc[]
 
 == Recommended settings
 
-The Oracle Linux 9.1 OS is compiled to recognize ONTAP LUNs and automatically set all configuration parameters correctly for both ASA and non-ASA configuration.
+The Oracle Linux 9.1 OS is compiled to recognize ONTAP LUNs and automatically set all configuration parameters correctly for both ASA and non-ASA configuration. You can further optimize performance for your host configuration with the following recommended settings.
 
 include::_include/hu/reuse_hu_recommended_settings.adoc[]
 
@@ -118,7 +118,7 @@ include::_include/hu/reuse_hu_recommended_settings.adoc[]
 
 .Example
 
-The following example shows how to correct an overridden default. In this case, the `multipath.conf` file defines values for `path_checker` and `no_path_retry` that are not compatible with ONTAP LUNs. If they cannot be removed because of other SAN arrays still attached to the host, these parameters can be corrected specifically for ONTAP LUNs with a device stanza.
+The following example demonstrates how to correct an overridden default. In this case, the `multipath.conf` file defines values for `path_checker` and `no_path_retry` that are not compatible with ONTAP LUNs. If they cannot be removed because of other SAN arrays still attached to the host, these parameters can be corrected specifically for ONTAP LUNs with a device stanza.
 
 ----
 defaults {
@@ -135,7 +135,7 @@ devices {
 }
 ----
 
-NOTE: To configure Oracle Linux 9.1 RedHat Enterprise Kernel (RHCK), use the link:hu_rhel_86.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 9.1.
+NOTE: To configure Oracle Linux 9.1 RedHat Enterprise Kernel (RHCK), use the link:hu_rhel_91.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 9.1.
 
 == KVM settings
 
@@ -148,13 +148,18 @@ Oracle Linux 9.1 with NetApp ONTAP release has the following known issues:
 [cols="10,30,30,10",options="header"]
 |===
 |NetApp Bug ID	|Title	|Description	|Bugzilla ID
-|1508554	|Sanlun utility with Emulex HBA need symbolic links from library packages	|Use of the Linux Unified Host Utilities CLI command - `sanlun fcp show adapter -v` with RHEL 9.1 fails with library dependencies for HBA discovery
+|1508554	|SAN LUN utility with Emulex HBA need symbolic links from library packages	a|When you execute the Linux Unified Host Utilities CLI command - "sanlun fcp show adapter -v" on a RHEL 9.1 NVMe host, the command fails with an error message displaying that the library dependencies required for an host bus adapter (HBA) discovery cannot be located:
+----
+[root@hostname ~]# sanlun fcp show adapter -v
+Unable to locate /usr/lib64/libHBAAPI.so library
+Make sure the package installing the library is installed & loaded
+----
 |Not Applicable
 |===
 
 == Release Notes
 
-=== ASM Mirroring
+include::_include/hu/reuse_hu_release_notes.adoc[]
 
-ASM mirroring might require changes to the Linux multipath settings to allow ASM to recognize a problem and switch over to an alternative failure group. Most ASM configurations on ONTAP use external redundancy, which means that data protection is provided by the external array and ASM does not mirror data. Some sites use ASM with normal redundancy to provide two-way mirroring, normally across different sites. See Oracle Databases on ONTAP for further information.
+
 
