--- a/nvme_ol_91.adoc
+++ b/nvme_ol_91.adoc
@@ -212,7 +212,7 @@ QLE2742 FW:v9.18.02 DVR:v10.02.00.106-k
 --
 ====
 
-.Enable 1MB I/O size
+=== Enable 1MB I/O size (Optional)
 
 include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
 
