--- a/nvme_rhel_88.adoc
+++ b/nvme_rhel_88.adoc
@@ -47,7 +47,7 @@ You can use the following procedure to enable in-kernal multipath.
 *Example output*
 +
 ----
-4.18.0-477.el8.x86_64
+4.18.0-477.10.1.el8_8.x86_64
 ----
 
 . Install the nvme-cli package: 
@@ -65,7 +65,7 @@ nvme-cli-1.16-7.el8.x86_64
 . Enable in -kernel NVMe multipath:
 +
 ----
-# grubby --args=nvme_core.multipath=Y --update-kernel /boot/vmlinuz-4.18.0-477.el8.x86_64
+# grubby --args=nvme_core.multipath=Y --update-kernel /boot/vmlinuz-4.18.0-477.10.1.el8_8.x86_64
 ----
 
 . On the host, check the host NQN string at `/etc/nvme/hostnqn`:
