--- a/hu_rhel_88.adoc
+++ b/hu_rhel_88.adoc
@@ -20,7 +20,7 @@ include::_include/hu/reuse_hu_installing_luhu_without32.adoc[]
 
 == SAN Tool Kit
 
-The tool kit is installed automatically when you install the NetApp Host Utilities package. This kit provides the `sanlun` utility, which helps you manage LUNs and HBAs. The `sanlun` command returns information about the LUNs mapped to your host, multipathing, and information necessary to create initiator groups.
+The tool kit is installed automatically when you install the NetApp Host Utilities package. This kit provides the `sanlun` utility, which helps you manage LUNs and host bus adapters (HBAs). The `sanlun` command returns information about the LUNs mapped to your host, multipathing, and information necessary to create initiator groups.
 
 .Example
 
@@ -48,7 +48,7 @@ include::_include/hu/reuse_hu_san_booting_steps.adoc[]
 
 == Multipathing
 
-For Red Hat Enterprise Linux (RHEL) 8.8, the `/etc/multipath.conf` file must exist, but you do not need to make specific changes to the file. RHEL 8.8 is compiled with all settings required to recognize and correctly manage ONTAP LUNs.
+For Red Hat Enterprise Linux (RHEL) 8.8, the `/etc/multipath.conf` file must exist, but you do not need to make specific changes to the file. RHEL 8.8 is compiled with all the settings required to recognize and correctly manage ONTAP LUNs.
 
 include::_include/hu/reuse_hu_multipathing.adoc[]
 
