--- a/nvme_ol_92.adoc
+++ b/nvme_ol_92.adoc
@@ -48,7 +48,7 @@ You can use the following procedure to validate the minimum supported OL 9.2 sof
 *Example output:*
 +
 ----
-5.14.0-284.el9.x86_64
+5.15.0-101.103.2.1.el9uek.x86_64
 ----
 
 . Install the `nvme-cli` package:
@@ -72,7 +72,7 @@ nvme-cli-2.2.1-2.el9.x86_64
 *Example output*
 +
 ----
-libnvme-1.0-5.el9.x86_64.rpm
+libnvme-1.2-2.el9.x86_64
 ----
 
 .	On the Oracle Linux 9.2 host, check the `hostnqn` string at `/etc/nvme/hostnqn`: 
@@ -84,7 +84,7 @@ libnvme-1.0-5.el9.x86_64.rpm
 *Example output:*
 +
 ----
-nqn.2014-08.org.nvmexpress:uuid:325e7554-1f9b-11ec-8489-3a68dd61a4df
+nqn.2014-08.org.nvmexpress:uuid:bc59d14c-47f3-11eb-b93c-3a68dd48673f
 ----
 
 . Verify that the `hostnqn` string matches the `hostnqn` string for the corresponding subsystem on the ONTAP array:
@@ -98,7 +98,7 @@ nqn.2014-08.org.nvmexpress:uuid:325e7554-1f9b-11ec-8489-3a68dd61a4df
 ----
 Vserver     Subsystem          Host NQN
 ----------- --------------- ----------------------------------------------------------
-vs_nvme207   nvme_ss_ol_1    nqn.2014-08.org.nvmexpress:uuid:325e7554-1f9b-11ec-8489-3a68dd61a4df 
+vs_nvme207   nvme_ss_ol_1    nqn.2014-08.org.nvmexpress:uuid:bc59d14c-47f3-11eb-b93c-3a68dd48673f 
 ----
 +
 [NOTE]
@@ -142,13 +142,13 @@ Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 +
 ----
 # cat /sys/class/scsi_host/host*/fwrev
-14.0.639.18, sli-4:2:c
-14.0.639.18, sli-4:2:c
+14.2.455.11, sli-4:2:c
+14.2.455.11, sli-4:2:c
 ----
 +
 ----
 # cat /sys/module/lpfc/version
-0:14.0.0.1
+0:14.2.0.5
 ----
 +
 For the most current list of supported adapter driver and firmware versions, see the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^].
@@ -164,8 +164,8 @@ For the most current list of supported adapter driver and firmware versions, see
 +
 ----
 # cat /sys/class/fc_host/host*/port_name
-0x100000109b1b95ef
-0x100000109b1b95f0
+0x100000109b3c081f
+0x100000109b3c0820 
 ----
 +
 ----
@@ -179,32 +179,26 @@ Online
 # cat /sys/class/scsi_host/host*/nvme_info
 NVME Initiator Enabled
 XRI Dist lpfc0 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc0 WWPN x100000109b1b95ef WWNN x200000109b1b95ef DID x061700 ONLINE
-NVME RPORT WWPN x20a7d039ea954d17 WWNN x20a6d039ea954d17 DID x06210f 
-TARGET DISCSRVC ONLINE 
-NVME RPORT  WWPN x20a9d039ea954d17 WWNN x20a6d039ea954d17 DID x061e0f 
-TARGET DISCSRVC ONLINE
+NVME LPORT lpfc0 WWPN x100000109b1c1204 WWNN x200000109b1c1204 DID x011d00 ONLINE
+NVME RPORT WWPN x203800a098dfdd91 WWNN x203700a098dfdd91 DID x010c07 TARGET DISCSRVC ONLINE
+NVME RPORT WWPN x203900a098dfdd91 WWNN x203700a098dfdd91 DID x011507 TARGET DISCSRVC ONLINE
 NVME Statistics
-LS: Xmt 000000025a Cmpl 000000025a Abort 00000000
-LS XMIT: Err 00000000  CMPL: xb 00000000 Err 00000000
-Total FCP Cmpl 000000000db61084 Issue 000000000dab3ba8 OutIO fffffffffff52b24
-abort 000005a0 noxri 00000000 nondlp 0000017c qdepth 00000000 wqerr 00000000 
-err   00000000
-FCP CMPL: xb 000007b0 Err 0000b605
+LS: Xmt 0000000f78 Cmpl 0000000f78 Abort 00000000
+LS XMIT: Err 00000000 CMPL: xb 00000000 Err 00000000
+Total FCP Cmpl 000000002fe29bba Issue 000000002fe29bc4 OutIO 000000000000000a
+abort 00001bc7 noxri 00000000 nondlp 00000000 qdepth 00000000 wqerr 00000000 err 00000000
+FCP CMPL: xb 00001e15 Err 0000d906
 NVME Initiator Enabled
 XRI Dist lpfc1 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc1 WWPN x100000109b1b95f0 WWNN x200000109b1b95f0 DID x061400 ONLINE
-NVME RPORT WWPN x20a8d039ea954d17 WWNN x20a6d039ea954d17 DID x060a0f 
-TARGET  DISCSRVC ONLINE
-NVME RPORT WWPN x20aad039ea954d17 WWNN x20a6d039ea954d17 DID x060d0f 
-TARGET DISCSRVC ONLINE
+NVME LPORT lpfc1 WWPN x100000109b1c1205 WWNN x200000109b1c1205 DID x011900 ONLINE
+NVME RPORT WWPN x203d00a098dfdd91 WWNN x203700a098dfdd91 DID x010007 TARGET DISCSRVC ONLINE
+NVME RPORT WWPN x203a00a098dfdd91 WWNN x203700a098dfdd91 DID x012a07 TARGET DISCSRVC ONLINE
 NVME Statistics
-LS: Xmt 000000025a Cmpl 000000025a Abort 00000000
-LS XMIT: Err 00000000  CMPL: xb 00000000 Err 00000000
-Total FCP Cmpl 000000000dbb72e2 Issue 000000000db0616f OutIO fffffffffff4ee8d
-abort 000005f4 noxri 00000000 nondlp 0000004b qdepth 00000000 wqerr 00000000 
-err   00000000
-FCP CMPL: xb 0000086a Err 0000b6ce
+LS: Xmt 0000000fa8 Cmpl 0000000fa8 Abort 00000000
+LS XMIT: Err 00000000 CMPL: xb 00000000 Err 00000000
+Total FCP Cmpl 000000002e14f170 Issue 000000002e14f17a OutIO 000000000000000a
+abort 000016bb noxri 00000000 nondlp 00000000 qdepth 00000000 wqerr 00000000 err 00000000
+FCP CMPL: xb 00001f50 Err 0000d9f8
 
 ----
 --
@@ -217,8 +211,8 @@ FCP CMPL: xb 0000086a Err 0000b6ce
 +
 ----
 # cat /sys/class/fc_host/host*/symbolic_name
-QLE2772 FW:v9.10.11 DVR:v10.02.07.900-k
-
+QLE2742 FW:v9.12.00 DVR:v10.02.08.100-k
+QLE2742 FW:v9.12.00 DVR:v10.02.08.100-k
 ----
 
 . Verify that `ql2xnvmeenable` is set. This enables the Marvell adapter to function as an NVMe/FC initiator:
@@ -298,10 +292,10 @@ nvme discover -t tcp -w host-traddr -a traddr
 *Example output:*
 +
 ----
-#nvme discover -t tcp -w 192.168.166.5 -a 192.168.166.22
-#nvme discover -t tcp -w 192.168.166.5 -a 192.168.166.23 
-#nvme discover -t tcp -w 192.168.167.5 -a 192.168.167.22
-#nvme discover -t tcp -w 192.168.167.5 -a 192.168.167.23
+# nvme discover -t tcp -w 192.168.8.1 -a 192.168.8.48
+# nvme discover -t tcp -w 192.168.8.1 -a 192.168.8.49
+# nvme discover -t tcp -w 192.168.9.1 -a 192.168.9.48
+# nvme discover -t tcp -w 192.168.9.1 -a 192.168.9.49
 ----
 
 . Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes, and set the controller loss timeout period for at least 30 minutes or 1800 seconds:
@@ -313,10 +307,10 @@ nvme connect-all -t tcp -w host-traddr -a traddr -l 1800
 *Example output:*
 +
 ----
-#	nvme	connect-all	-t	tcp	-w	192.168.166.5	-a	192.168.166.22	-l	1800
-#	nvme	connect-all	-t	tcp	-w	192.168.166.5	-a	192.168.166.23	-l	1800
-#	nvme	connect-all	-t	tcp	-w	192.168.167.5	-a	192.168.167.22	-l	1800
-#	nvme	connect-all	-t	tcp	-w	192.168.167.5	-a	192.168.167.23	-l	1800
+# nvme connect-all -t tcp -w 192.168.8.1 -a 192.168.8.48 -l 1800
+# nvme connect-all -t tcp -w 192.168.8.1 -a 192.168.8.49 -l 1800
+# nvme connect-all -t tcp -w 192.168.9.1 -a 192.168.9.48 -l 1800
+# nvme connect-all -t tcp -w 192.168.9.1 -a 192.168.9.49 -l 1800
 ----
 
 
@@ -356,12 +350,18 @@ round-robin
 ----
 Node         SN                   Model                          
 ---------------------------------------------------------  
-/dev/nvme0n1 81CZ5BQuUNfGAAAAAAAB NetApp ONTAP Controller                                    
+/dev/nvme0n1 814vWBNRwf9HAAAAAAAB NetApp ONTAP Controller
+/dev/nvme0n2 814vWBNRwf9HAAAAAAAB NetApp ONTAP Controller
+/dev/nvme0n3 814vWBNRwf9HAAAAAAAB NetApp ONTAP Controller
+                                  
 
 
 Namespace Usage    Format             FW             Rev
 -----------------------------------------------------------
-1                 21.47 GB / 21.47 GB	4 KiB + 0 B   FFFFFFFF        
+1                 85.90 GB / 85.90 GB  4 KiB + 0 B   FFFFFFFF
+2                 85.90 GB / 85.90 GB  24 KiB + 0 B  FFFFFFFF
+3	                85.90 GB / 85.90 GB  4 KiB + 0 B   FFFFFFFF
+      
 ----
 
 . Verify that the controller state of each path is live and has the correct ANA status:
@@ -377,11 +377,13 @@ Namespace Usage    Format             FW             Rev
 *Example output:*
 
 ----
-# nvme list-subsys /dev/nvme0n1 nvme-subsys4 - NQN=nqn.1992-08.com.netapp:sn.8763d311b2ac11ed950ed039ea951c46:subsystem.rhel_207_LB 
-+- nvme1 fc traddr=nn-0x20a6d039ea954d17:pn-0x20a7d039ea954d17,host_traddr=nn-0x200000109b1b95ef:pn-0x100000109b1b95ef live optimized 
-+- nvme2 fc traddr=nn-0x20a6d039ea954d17:pn-0x20a8d039ea954d17,host_traddr=nn-0x200000109b1b95f0:pn-0x100000109b1b95f0 live optimized 
-+- nvme3 fc traddr=nn-0x20a6d039ea954d17:pn-0x20aad039ea954d17,host_traddr=nn-0x200000109b1b95f0:pn-0x100000109b1b95f0 live non-optimized 
-+- nvme5 fc traddr=nn-0x20a6d039ea954d17:pn-0x20a9d039ea954d17,host_traddr=nn-0x200000109b1b95ef:pn-0x100000109b1b95ef live non-optimized
+nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.5f5f2c4aa73b11e9967e00a098df41bd:subsystem.nvme_ss_ol_1
+\
++- nvme0 fc traddr=nn-0x203700a098dfdd91:pn-0x203800a098dfdd91 host_traddr=nn-0x200000109b1c1204:pn-0x100000109b1c1204 live non-optimized
++- nvme1 fc traddr=nn-0x203700a098dfdd91:pn-0x203900a098dfdd91 host_traddr=nn-0x200000109b1c1204:pn-0x100000109b1c1204 live non-optimized
++- nvme2 fc traddr=nn-0x203700a098dfdd91:pn-0x203a00a098dfdd91 host_traddr=nn-0x200000109b1c1205:pn-0x100000109b1c1205 live optimized
++- nvme3 fc traddr=nn-0x203700a098dfdd91:pn-0x203d00a098dfdd91 host_traddr=nn-0x200000109b1c1205:pn-0x100000109b1c1205 live optimized
+
 
 ----
 --
@@ -393,9 +395,13 @@ nvme list-subsys /dev/nvme1n22
 ----
 *Example output*
 ----
-nvme-subsys1 - NQN=nqn.1992-08.com.netapp:sn.c680f5bcae1411ed8639d039ea951c46:subsystem.rhel_tcp97 
+nvme-subsys1 - NQN=nqn.1992-08.com.netapp:sn.68c036aaa3cf11edbb95d039ea243511:subsystem.tcp
 \
-+- nvme1 tcp traddr=192.168.167.23,trsvcid=4420,host_traddr=192.168.167.5 live non-optimized 
+ +- nvme2 tcp traddr=192.168.8.49,trsvcid=4420,host_traddr=192.168.8.1 live optimized
+ +- nvme3 tcp traddr=192.168.8.48,trsvcid=4420,host_traddr=192.168.8.1 live optimized
+ +- nvme6 tcp traddr=192.168.9.49,trsvcid=4420,host_traddr=192.168.9.1 live non-optimized
+ +- nvme7 tcp traddr=192.168.9.48,trsvcid=4420,host_traddr=192.168.9.1 live non-optimized
+
 ----
 --
 ====
@@ -415,13 +421,19 @@ nvme-subsys1 - NQN=nqn.1992-08.com.netapp:sn.c680f5bcae1411ed8639d039ea951c46:su
 ----
 Device        Vserver   Namespace Path                                                          
 ----------------------- ------------------------------ 
-/dev/nvme0n1 vs_tcp  /vol/vol1/ns1             
+/dev/nvme0n1   vs_ol_nvme  /vol/ol_nvme_vol_1_1_0/ol_nvme_ns
+/dev/nvme0n2   vs_ol_nvme  /vol/ol_nvme_vol_1_0_0/ol_nvme_ns
+/dev/nvme0n3   vs_ol_nvme  /vol/ol_nvme_vol_1_1_1/ol_nvme_ns
+           
              
 
 
 NSID       UUID                                   Size
 ------------------------------------------------------------
-1          79c2c569-b7fa-42d5-b870-d9d6d7e5fa84   21.47GB
+1          72b887b1-5fb6-47b8-be0b-33326e2542e2   85.90GB
+2          04bf9f6e-9031-40ea-99c7-a1a61b2d7d08   85.90GB
+3          264823b1-8e03-4155-80dd-e904237014a4   85.90GB
+
 
 ----
 --
@@ -433,24 +445,40 @@ NSID       UUID                                   Size
 *Example output*
 ----
 {
-{
-
 "ONTAPdevices" : [
-{
-
-"Device" : "/dev/nvme0n1",
-"Vserver" : "vs_tcp79",
-"Namespace_Path" : "/vol/vol1/ns1", 
-"NSID" : 1,
-"UUID" : "79c2c569-b7fa-42d5-b870-d9d6d7e5fa84",
-"Size" : "21.47GB",
-"LBA_Data_Size" : 4096,
-"Namespace_Size" : 5242880
-},
-
-   ]
-} 
+    {
+        "Device" : "/dev/nvme0n1",
+        "Vserver" : "vs_ol_nvme",
+        "Namespace_Path" : "/vol/ol_nvme_vol_1_1_0/ol_nvme_ns",
+        "NSID" : 1,
+        "UUID" : "72b887b1-5fb6-47b8-be0b-33326e2542e2",
+        "Size" : "85.90GB",
+        "LBA_Data_Size" : 4096,
+        "Namespace_Size" : 20971520
+    },
+    {
+        "Device" : "/dev/nvme0n2",
+        "Vserver" : "vs_ol_nvme",
+        "Namespace_Path" : "/vol/ol_nvme_vol_1_0_0/ol_nvme_ns",
+        "NSID" : 2,
+        "UUID" : "04bf9f6e-9031-40ea-99c7-a1a61b2d7d08",
+        "Size" : "85.90GB",
+        "LBA_Data_Size" : 4096,
+        "Namespace_Size" : 20971520
+      },
+      {
+         "Device" : "/dev/nvme0n3",
+         "Vserver" : "vs_ol_nvme",
+         "Namespace_Path" : "/vol/ol_nvme_vol_1_1_1/ol_nvme_ns",
+         "NSID" : 3,
+         "UUID" : "264823b1-8e03-4155-80dd-e904237014a4",
+         "Size" : "85.90GB",
+         "LBA_Data_Size" : 4096,
+         "Namespace_Size" : 20971520
+       },
+  ]
 }
+
 ----
 --
 ====
