--- a/hu_luhu_71.adoc
+++ b/hu_luhu_71.adoc
@@ -45,6 +45,9 @@ The management software enables the SAN toolkit commands to gather information a
 ** Brocade HBA – Brocade Command Utility CLI
 ** RPM Packages "libhbaapi" and "libhbalinux" available for each Linux Distribution should be installed on the host OS.
 
+== Default values recommended when using drivers bundled with Linux kernel
+When you are setting up an FC environment that uses the native, inbox drivers that are bundled with the Linux kernel, you can use the default values for the drivers. In iSCSI environments where you are using a iSCSI solution software, you need to manually set certain recommended values depending on the OS version you are using.
+
 == SAN Toolkit
 
 Linux Unified Host Utilities is a NetApp host software that provides a command line tool kit on your Linux host.
