--- a/nvme_rhel_91.adoc
+++ b/nvme_rhel_91.adoc
@@ -421,23 +421,6 @@ NSID UUID                                   Size
 |`nvme list-subsys` command returns repeated nvme controller list for a given subsystem	|The `nvme list-subsys` command should return a unique list of nvme controllers associated to a given subsystem. In RHEL 9.1, the `nvme list-subsys` command returns nvme controllers with its respective ANA state for all namespaces that belong to a given subsystem. However, the ANA state is a per-namespace attribute therefore, it would be ideal to display unique nvme controller entries with the path state if you list the subsystem command syntax for a given namespace.  |2130106
 |===
 
-== Troubleshooting
-
-Before commencing any troubleshooting for any NVMe/FC failures, make sure that you are running a configuration that is compliant to the Interoperability Matrix Tool (IMT) specifications and then proceed with the next steps to debug any host side issues.
-
-=== lpfc verbose logging
-
-include::_include/nvme/reuse_nvme_verbose_logging.adoc[]
-  
-=== qla2xxx verbose logging
-
-include::_include/nvme/reuse_nvme_qla2xxx_verbose_logging.adoc[]
-
-
-include::_include/hu/reuse_hu_common_nvme_cli_errors.adoc[]
-
-=== When to contact technical support
-
-include::_include/hu/reuse_hu_contact_tech_support.adoc[]
+Refer to the link:nvme_troubleshoot.html[Troublehsoot] section.
 
 // 2022,12-06, Jira IEOPS-690
