--- a/nvme_rhel_84.adoc
+++ b/nvme_rhel_84.adoc
@@ -425,6 +425,9 @@ NSID  UUID                                   Size
 
 }
 ----
+== Known issues
+
+There are no known issues.
 
 == Troubleshooting
 
