--- a/nvme_rhel_85.adoc
+++ b/nvme_rhel_85.adoc
@@ -364,6 +364,8 @@ NSID  UUID                                   Size
 }
 ----
 
+== Known issues
+There are no known issues.
 
 == Troubleshooting
 
