--- a/nvme_rhel_91.adoc
+++ b/nvme_rhel_91.adoc
@@ -414,6 +414,8 @@ NSID UUID                                   Size
 
 == Known issues
 
+The NVMe-oF host configuration for RHEL 9.1 with ONTAP release has the following known issues:
+
 [cols="10,30,30,10",options="header"]
 |===
 |NetApp Bug ID	|Title	|Description	|Bugzilla ID
