--- a/nvme_sles15_sp2.adoc
+++ b/nvme_sles15_sp2.adoc
@@ -24,7 +24,7 @@ include::_include/hu/reuse_hu_cloud_note.adoc[]
 
 ==	Known limitations
 
-None.
+There are no known limitations.
 
 ==	Enable NVMe/FC on SLES15 SP2
 
@@ -208,7 +208,8 @@ Device Vserver Namespace Path NSID UUID Size
   ]
 }
 ----
-
+== Known issues
+There are no known issues.
 ==	Enable 1MB I/O Size for Broadcom NVMe/FC
 
 include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
