--- a/nvme_sles15_sp3.adoc
+++ b/nvme_sles15_sp3.adoc
@@ -436,6 +436,9 @@ NSID  UUID                                   Size
 
 }
 ----
+== Known issues
+
+There are no known issues.
 
 == Troubleshooting
 
