--- a/nvme_sles15_sp4.adoc
+++ b/nvme_sles15_sp4.adoc
@@ -442,6 +442,9 @@ NSID  UUID                                   Size
 
 }
 ----
+== Known issues
+
+There are no known issues.
 
 == Troubleshooting
 
